Add wallet data
